# fable

./: Dockerfile  concept.py  docker-compose.yml  dump.sql  gen.py  main.py  pyproject.toml  pytest.ini  requirements.txt  select.sql  test.py
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
concept/: __init__.py  models.py
sql/: __init__.py  aggs.py  analyze.py  core.py  db.py  field.py  fields.py  func.py  functions.py  migration.py  mixins.py  model.py  models.py  query.py  select.py  types.py  typings.py  update.py  utils.py
sql/core/: __init__.py  aggregates.py  base.py  case.py  converters.py  datatypes.py  enums.py  expressions.py  fields.py  functions.py  helpers.py  mixins.py  node.py  order.py  query.py  raw.py  scalars.py  types.py  window.py
sql/fields/: base.py  factory.py  fields.py
sql/queries/: base.py  delete.py  raw.py  select.py  update.py  values.py
sql_/: app.py  choices.py  core.py  delete.py  field.py  insert.py  mixins.py  model.py  models.py  query.py  select.py  update.py  utils.py
sql_/core/: aggregates.py  base.py  case.py  expressions.py  functions.py  window.py
sql__/: aggregate.py  connection.py  cte.py  engine.py  field.py  insert.py  list.py  mixins.py  model.py  query.py  recursive.py  schema.py  select.py  typing.py
tests/: __init__.py  conftest.py  dump.sql  test_aggregates.py  test_core.py  test_db.py  test_db_expressions.py  test_db_functions.py  test_db_window.py  test_expressions.py  test_functions.py  test_models.py  test_node.py  test_raw.py  test_select.py  test_sql_types.py  test_window.py
(+5 files in other folders)
